Updates to java upgrade information